...
  const handleSuccessModalClose = () => {
    setShowSuccessModal(false);
    navigation.goBack();
  };

  return (
    <ScreenLayout variant="detail" title="Create Listing">
      <View style={{ flex: 1, flexDirection: 'column' }}>
        <ScrollView ref={scrollViewRef} style={styles.container}>
          <View style={styles.form}>
            <Text style={styles.sectionTitle}>Item Details</Text>

            {/* Title */}
...
